Made mcmodel=medium specific to 64 bits compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -251,7 +251,10 @@ macro(createSingleASL name sourcedir sources)
     target_compile_options(${name} PRIVATE 
       /wd4013 /wd4018 /wd4101 /wd4244 /wd4273 /wd4267 /wd4996 /MT$<$<CONFIG:Debug>:d>)
   else()
-    target_compile_options(${name} PRIVATE -Wno-unused-result -Wno-parentheses -mcmodel=medium)
+    target_compile_options(${name} PRIVATE -Wno-unused-result -Wno-parentheses)
+    if(${ARCH} MATCHES 64)
+      target_compile_options(${name} PRIVATE -mcmodel=medium)
+    endif()
   endif()
   set_property(TARGET ${name} PROPERTY POSITION_INDEPENDENT_CODE ON)
 endmacro()
