Added OpenMP flags to asl-mt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -276,6 +276,9 @@ if(BUILD_MT_LIBS)
   createSingleASL(asl2-mt ${ASL2_SOURCE_DIR} ASL2_SOURCES)
   target_compile_definitions(asl-mt PUBLIC MULTIPLE_THREADS ALLOW_OPENMP)
   target_compile_definitions(asl2-mt PUBLIC MULTIPLE_THREADS ALLOW_OPENMP)
+  find_package(OpenMP REQUIRED)
+  target_compile_options(asl-mt PUBLIC ${OpenMP_CXX_FLAGS}) 
+  target_compile_options(asl2-mt PUBLIC ${OpenMP_CXX_FLAGS})
   message("Building MT libs: asl-mt and asl2-mt")
 endif()
 
