Updated to have transitive OpenMP support when linking to asl-mt.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -273,10 +273,15 @@ createSingleASL(asl2 ${ASL2_SOURCE_DIR} ASL2_SOURCES)
 if(BUILD_MT_LIBS)
   createSingleASL(asl-mt ${ASL_SOURCE_DIR} ASL_SOURCES)
   createSingleASL(asl2-mt ${ASL2_SOURCE_DIR} ASL2_SOURCES)
-  target_compile_definitions(asl-mt PUBLIC MULTIPLE_THREADS ALLOW_OPENMP)
-  target_compile_definitions(asl2-mt PUBLIC MULTIPLE_THREADS ALLOW_OPENMP)
+  target_compile_definitions(asl-mt PUBLIC ALLOW_OPENMP)
+  target_compile_definitions(asl2-mt PUBLIC ALLOW_OPENMP)
   include(FindOpenMP)
   if(APPLE) 
+    target_include_directories(asl-mt PUBLIC ${OpenMP_C_INCLUDE_DIRS})
+    target_link_libraries(asl-mt PUBLIC ${OpenMP_C_LIBRARIES})
+    target_include_directories(asl2-mt PUBLIC ${OpenMP_C_INCLUDE_DIRS})
+    target_link_libraries(asl2-mt PUBLIC ${OpenMP_C_LIBRARIES})
+  else()
     target_compile_options(asl-mt PUBLIC ${OpenMP_C_FLAGS}) 
     target_compile_options(asl2-mt PUBLIC ${OpenMP_C_FLAGS})
   endif()
