Added conditional policy setting for cmake versions < 3.13.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,9 @@
 # BUILD_F2C to build the fortran to c converter (https://www.netlib.org/f2c/f2c.pdf)
 # BUILD_EXAMPLES to build the examples
 project(ASL)
-
-cmake_policy(SET CMP0077 NEW)
+if (${CMAKE_VERSION} GREATER "3.13")
+  cmake_policy(SET CMP0077 NEW)
+endif()
 
 cmake_minimum_required(VERSION 2.8)
 # Set the path to CMake modules.
