Added missing link library for example

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -32,6 +32,9 @@ set(ASLEXAMPLES evalchk gjh nlcopy et)
 foreach(example ${ASLEXAMPLES})
   aslExample(${example})
 endforeach()
+if(UNIX)
+  target_link_libraries(et PRIVATE rt)
+endif()
 
 set(FUNCADDEXAMPLES lin1 lin2 lin3 linrc dualconv qtest)
 foreach(example ${FUNCADDEXAMPLES})
