Added generated package files to the appropriate component

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -419,4 +419,4 @@ if(TARGET aslcpp)
     install(FILES ${ASL_CPP_HEADERS} DESTINATION include/aslcpp  COMPONENT asl) 
     install(TARGETS aslcpp EXPORT ampl-asl-config DESTINATION lib  COMPONENT asl)
 endif()
-install(EXPORT ampl-asl-config DESTINATION share/ampl-asl)
+install(EXPORT ampl-asl-config DESTINATION share/ampl-asl COMPONENT asl)
