--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -8,8 +8,8 @@ function(aslExample name)
   if(UNIX)
     target_link_libraries(${name} PRIVATE m dl)
   endif()
-  add_to_folder(examples ${name})
-   install(TARGETS ${name} DESTINATION examples COMPONENT examples)
+  addToASLFolder(examples ${name})
+  install(TARGETS ${name} DESTINATION examples COMPONENT examples)
 endfunction()
 
 function(portExample name)
@@ -21,6 +21,7 @@ add_library(funcadd0 OBJECT ../solvers/funcadd0.c)
 add_dependencies(funcadd0 arith-h)
 get_target_property(asl_INCLUDES asl INCLUDE_DIRECTORIES)
 target_include_directories(funcadd0 PUBLIC ${asl_INCLUDES})
+addToASLFolder(examples funcadd0)
 
 function(funcadd0Example name)
     aslExample(${name} ${ARGN})
@@ -28,6 +29,7 @@ function(funcadd0Example name)
 endfunction()
 
 add_subdirectory(PORT/cport)
+addToASLFolder(examples cport)
 
 set(ASLEXAMPLES evalchk gjh nlcopy et)
 foreach(example ${ASLEXAMPLES})
@@ -47,7 +49,6 @@ portExample(mng1)
 portExample(nl21)
 portExample(mng rvmsg.c keywds.c)
 portExample(nl2 rvmsg.c keywds.c)
-
 portExample(mnh rvmsg.c keywds.c)
 target_compile_definitions(mnh PRIVATE Std_dev)
 
